--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,8 @@
+# Ignore le dossier node_modules, qui contient les dépendances installées via npm.
 node_modules/
+
+# Ignore le dossier coverage, qui contient les rapports de couverture générés lors des tests.
+coverage/
+
+# Ignore les fichiers .env qui contiennent des informations sensibles et spécifiques à l'environnement.
+.env
