--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,6 @@ coverage/
 
 # Ignore les fichiers .env qui contiennent des informations sensibles et spécifiques à l'environnement.
 .env
+
+# To fix the issue with the package-lock.json file, add the following line to the .gitignore file:
+package-lock.json
